2017-12-02  Gary Hai  <gary@XL59.com>

  * src/sop.app.src: Bump version "3.2.1".

  * src/sop.erl: Add macro LOG for debug in console.

2017-11-23  Gary Hai  <gary@XL59.com>

  * src/sop.app.src: Bump version to "3.2.0".

  * src/sop.erl: Subscribe/Notify support category.
  (subscribe): Add a new parameter as category list to filter notifications.
  (notify): Add a new parameter as tag to classify notifications.
  (subscribers): Support category and remove all subscribers.

2017-11-13  Gary Hai  <gary@XL59.com>

  * src/sop.app.src: Bump version to "3.1.0".

  * src/sop.erl (access): Beautify the code, handle {new, _, _} for leaf access.

2017-11-11  Gary Hai  <gary@XL59.com>

  * src/sop.erl (access): When access raw data, discard the options.

2017-10-27  Gary Hai  <gary@XL59.com>

  * src/sop.erl: Fix minor issue of dialyzer of missing 'prop' actor type.

2017-10-26  Gary Hai  <gary@XL59.com>

  * src/sop.app.src: Bump version to "3.0.1".

  * src/sop.erl (access): Simplify new data with key for map type data.

2017-10-19  Gary Hai  <gary@XL59.com>

  * src/sop.app.src: Bump version to "v3.0.0" for external commit.

2017-10-18  Gary Hai  <gary@XL59.com>

  * src/sop.erl (handle_info): Accept 'stop' command without reason.

2017-10-15  Gary Hai  <gary@XL59.com>

  * src/sop.erl (attach): Add existence check and remove "fun attach/2".

2017-10-14  Gary Hai  <gary@XL59.com>

  * src/sop.erl (create): Fix bug of enable function calling.

2017-10-13  Gary Hai  <gary@XL59.com>

  * src/sop.erl (enable): Fix bug of missing argument.

2017-10-06  Gary Hai  <gary@XL59.com>

  * src/sop.erl (create): CHANGELOG file generated by change-log mode.

CHANGELOG
=========

devel
-----

- `fun create/1` behaviors templates are more flexible.
- Return value format of `fun invoke/4` changed from result() to state().
- Add map-reduce feature.
- Export `fun localize/2` and `fun map_reduce/4`.
- Optimize `refer`, reduce 14.4% of the calling times on `on_event`.